[metadata]
name = ckanext-restricteddata
version = 0.0.1
description = Restricted data application extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vrk-kpa/restricteddata
author = Digital and Population Data Services Agency, Finland
author_email =
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN restricted data

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             restricteddata = ckanext.restricteddata.plugin:RestrictedDataPlugin
             restricteddata_pages = ckanext.restricteddata.plugin:RestrictedDataPagesPlugin
             restricteddata_reset = ckanext.restricteddata.plugin:RestrictedDataResetPlugin
ckan.rdf.profiles =
             restricteddata_dcat_ap = ckanext.restricteddata.dcat:RestrictedDataDCATAPProfile

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/restricteddata/i18n/ckanext-restricteddata.pot
width = 80

[init_catalog]
domain = ckanext-restricteddata
input_file = ckanext/restricteddata/i18n/ckanext-restricteddata.pot
output_dir = ckanext/restricteddata/i18n

[update_catalog]
domain = ckanext-restricteddata
input_file = ckanext/restricteddata/i18n/ckanext-restricteddata.pot
output_dir = ckanext/restricteddata/i18n
previous = true

[compile_catalog]
domain = ckanext-restricteddata
directory = ckanext/restricteddata/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
